wrap fix

--- a/src/assets/sass/layout/_landing.scss
+++ b/src/assets/sass/layout/_landing.scss
@@ -9,6 +9,10 @@
             background-position: top right;
             background-repeat: no-repeat;
             background-size: contain;
+            padding-left: 5rem;
+            padding-right: 5rem;
+            padding-top: 3rem;
+            padding-bottom: 3rem;
 
             .header-top {
                 color: #495057;
@@ -70,6 +74,12 @@
                         .p-button-text {
                             font-weight: 700;
                         }
+                    }
+                }
+
+                .header-content-right {
+                    img {
+                        height: 360px;
                     }
                 }
             }
@@ -203,6 +213,11 @@
             }
 
             #header {
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+                padding-top: 1rem;
+                padding-bottom: 1rem;
+
                 .header-top {
                     width: 100%;
 
@@ -248,6 +263,8 @@
                 }
 
                 .header-content {
+                    flex-wrap: wrap;
+
                     .header-content-left {
                         .header-text {
                             font-size: 35px;
